--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
       {
         "origin": "https://n"
       }
-    ]
+    ],
+    "expo-font"
   ],
   "name": "smartDayIA",
   "slug": "smartDayIA"
