--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "expo": "^54.0.1",
+    "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.8",
+    "expo-font": "~14.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.7",
     "expo-router": "~6.0.0",
-    "expo-splash-screen": "~31.0.8",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.7",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
